//! gRPC server for cell (management cluster)
//!
//! Accepts incoming connections from agents running on workload clusters.
//!
//! # mTLS Security
//!
//! The server requires client certificates signed by the cell CA.
//! Each agent presents its certificate, and the cluster ID is extracted
//! from the certificate's CN field.

use std::net::SocketAddr;
use std::pin::Pin;

use futures::Stream;
use tokio::sync::mpsc;
use tokio_stream::wrappers::ReceiverStream;
use tokio_stream::StreamExt;
use tonic::transport::Server;
use tonic::{Request, Response, Status, Streaming};
use tracing::{debug, error, info, instrument, warn};

use kube::api::DeleteParams;
use kube::{Api, Client};
use lattice_common::crd::LatticeCluster;

use lattice_proto::lattice_agent_server::{LatticeAgent, LatticeAgentServer};
use lattice_proto::{agent_message::Payload, AgentMessage, AgentState, CellCommand};

use crate::{AgentConnection, SharedAgentRegistry};
use lattice_infra::ServerMtlsConfig;

/// gRPC server for agent communication
pub struct AgentServer {
    registry: SharedAgentRegistry,
    /// Kubernetes client for persisting deletion requests
    kube_client: Client,
}

/// Handle an agent message (standalone function to avoid temporary object creation)
async fn handle_agent_message_impl(
    registry: SharedAgentRegistry,
    msg: &AgentMessage,
    command_tx: &mpsc::Sender<CellCommand>,
    kube_client: &Client,
) {
    let cluster_name = &msg.cluster_name;

    match &msg.payload {
        Some(Payload::Ready(ready)) => {
            info!(
                cluster = %cluster_name,
                agent_version = %ready.agent_version,
                k8s_version = %ready.kubernetes_version,
                state = ?ready.state(),
                "Agent connected"
            );

            let conn = AgentConnection::new(
                cluster_name.clone(),
                ready.agent_version.clone(),
                ready.kubernetes_version.clone(),
                command_tx.clone(),
            );
            registry.register(conn);
            registry.update_state(cluster_name, ready.state());

            // If agent reports Ready state, pivot must have completed
            if ready.state() == AgentState::Ready {
                registry.set_pivot_complete(cluster_name, true);
            }

            // NOTE: No ACK recovery needed for unpivot. Once the parent has imported
            // and unpaused CAPI resources, it owns the child's infrastructure and will
            // delete it via CAPI. The child cluster goes away at the infrastructure level,
            // so the child's finalizer becomes irrelevant.
        }
        Some(Payload::BootstrapComplete(bc)) => {
            info!(
                cluster = %cluster_name,
                capi_ready = bc.capi_ready,
                installed_providers = ?bc.installed_providers,
                "Bootstrap complete"
            );
            // Store CAPI ready status - pivot requires this to be true
            registry.set_capi_ready(cluster_name, bc.capi_ready);
        }
        Some(Payload::Heartbeat(hb)) => {
            debug!(
                cluster = %cluster_name,
                state = ?hb.state(),
                uptime = hb.uptime_seconds,
                "Heartbeat received"
            );
            registry.update_state(cluster_name, hb.state());
        }
        Some(Payload::ClusterHealth(health)) => {
            debug!(
                cluster = %cluster_name,
                ready_nodes = health.ready_nodes,
                total_nodes = health.total_nodes,
                "Health update"
            );
        }
        Some(Payload::StatusResponse(sr)) => {
            debug!(
                cluster = %cluster_name,
                request_id = %sr.request_id,
                "Status response received"
            );
        }
        Some(Payload::ClusterDeleting(cd)) => {
            // Guard against concurrent teardown spawns
            if !registry.start_teardown(cluster_name) {
                debug!(
                    cluster = %cluster_name,
                    "Teardown already in progress, ignoring duplicate ClusterDeleting"
                );
                return;
            }

            info!(
                cluster = %cluster_name,
                namespace = %cd.namespace,
                object_count = cd.objects.len(),
                "Cluster deletion requested - importing CAPI and initiating deletion"
            );

            // Convert proto objects to MoveObjectInput
            let objects: Vec<lattice_move::MoveObjectInput> = cd
                .objects
                .iter()
                .map(|obj| lattice_move::MoveObjectInput {
                    source_uid: obj.source_uid.clone(),
                    manifest: obj.manifest.clone(),
                    owners: obj
                        .owners
                        .iter()
                        .map(|o| lattice_move::SourceOwnerRefInput {
                            source_uid: o.source_uid.clone(),
                            api_version: o.api_version.clone(),
                            kind: o.kind.clone(),
                            name: o.name.clone(),
                            controller: o.controller,
                            block_owner_deletion: o.block_owner_deletion,
                        })
                        .collect(),
                })
                .collect();

            let namespace = cd.namespace.clone();
            let cluster = cluster_name.to_string();
            let client = kube_client.clone();
            let registry_for_task = registry.clone();

            // Spawn to avoid blocking the gRPC stream
            // This only does import/unpause/delete - controller handles the rest
            tokio::spawn(async move {
                // Step 1: Import CAPI objects from child using AgentMover (same as pivot receiver)
                if !objects.is_empty() {
                    info!(
                        cluster = %cluster,
                        object_count = objects.len(),
                        "Importing CAPI objects from child"
                    );

                    let mut mover = lattice_move::AgentMover::new(client.clone(), &namespace);

                    // Ensure namespace exists
                    if let Err(e) = mover.ensure_namespace().await {
                        error!(cluster = %cluster, error = %e, "Failed to ensure namespace");
                        registry_for_task.finish_teardown(&cluster);
                        return;
                    }

                    // Apply all objects (AgentMover handles UID remapping)
                    let (mappings, errors) = mover.apply_batch(&objects).await;

                    if !errors.is_empty() {
                        for e in &errors {
                            warn!(
                                cluster = %cluster,
                                source_uid = %e.source_uid,
                                error = %e.message,
                                "Failed to import object"
                            );
                        }
                    }

                    info!(
                        cluster = %cluster,
                        created = mappings.len(),
                        errors = errors.len(),
                        "CAPI objects imported"
                    );
                }

                // Step 2: Unpause CAPI so it can reconcile
                info!(cluster = %cluster, "Unpausing CAPI cluster");
                if let Err(e) = lattice_move::unpause_cluster(&client, &namespace).await {
                    warn!(cluster = %cluster, error = %e, "Failed to unpause CAPI (may already be unpaused)");
                    // Continue anyway - might already be unpaused
                }

                // Step 3: Delete LatticeCluster (adds deletionTimestamp)
                // The finalizer keeps it around while controller handles CAPI cleanup
                info!(cluster = %cluster, "Initiating LatticeCluster deletion");
                let api: Api<LatticeCluster> = Api::all(client.clone());
                if let Err(e) = api.delete(&cluster, &DeleteParams::default()).await {
                    if !matches!(&e, kube::Error::Api(ae) if ae.code == 404) {
                        error!(cluster = %cluster, error = %e, "Failed to delete LatticeCluster");
                    }
                }

                // Clear teardown guard - controller takes over from here
                registry_for_task.finish_teardown(&cluster);
                info!(cluster = %cluster, "Teardown initiated - controller will handle cleanup");
            });
        }
        Some(Payload::KubernetesResponse(resp)) => {
            debug!(
                cluster = %cluster_name,
                request_id = %resp.request_id,
                status_code = resp.status_code,
                streaming = resp.streaming,
                stream_end = resp.stream_end,
                "K8s API response received (not processed - future RPC support)"
            );
            // K8s API proxy functionality not yet implemented.
            // All interactions should use RPC commands, not HTTP proxying.
        }
        Some(Payload::MoveAck(ack)) => {
            if let Some(sender) = registry.take_pending_batch_ack(&ack.request_id) {
                let batch_ack = lattice_move::BatchAck {
                    mappings: ack
                        .mappings
                        .iter()
                        .map(|m| (m.source_uid.clone(), m.target_uid.clone()))
                        .collect(),
                    errors: ack
                        .errors
                        .iter()
                        .map(|e| (e.source_uid.clone(), e.message.clone(), e.retryable))
                        .collect(),
                };
                let _ = sender.send(batch_ack);
                debug!(
                    cluster = %cluster_name,
                    request_id = %ack.request_id,
                    mappings = ack.mappings.len(),
                    "Delivered batch ack"
                );
            } else {
                warn!(
                    cluster = %cluster_name,
                    request_id = %ack.request_id,
                    "Received ack for unknown request"
                );
            }
        }
        Some(Payload::MoveCompleteAck(ack)) => {
            if let Some(sender) = registry.take_pending_complete_ack(&ack.request_id) {
                let complete_ack = lattice_move::CompleteAck {
                    success: ack.success,
                    error: ack.error.clone(),
                    resources_created: ack.resources_created,
                };
                let _ = sender.send(complete_ack);
                if ack.success {
                    info!(
                        cluster = %cluster_name,
                        request_id = %ack.request_id,
                        resources_created = ack.resources_created,
                        "Move completed"
                    );
                } else {
                    error!(
                        cluster = %cluster_name,
                        request_id = %ack.request_id,
                        error = %ack.error,
                        "Move failed"
                    );
                }
            } else {
                warn!(
                    cluster = %cluster_name,
                    request_id = %ack.request_id,
                    "Received ack for unknown request"
                );
            }
        }
        None => {
            warn!(cluster = %cluster_name, "Received message with no payload");
        }
    }
}

impl AgentServer {
    /// Create a new agent server with the given registry and kube client
    pub fn new(registry: SharedAgentRegistry, kube_client: Client) -> Self {
        Self {
            registry,
            kube_client,
        }
    }

    /// Convert to a tonic service
    pub fn into_service(self) -> LatticeAgentServer<Self> {
        LatticeAgentServer::new(self)
    }

    /// Start the gRPC server with mTLS on the given address
    ///
    /// This is the primary entry point for running the cell gRPC server.
    /// It requires mTLS configuration with:
    /// - Server certificate (presented to agents)
    /// - Server private key
    /// - CA certificate (for verifying agent certificates)
    pub async fn serve_with_mtls(
        registry: SharedAgentRegistry,
        addr: SocketAddr,
        mtls_config: ServerMtlsConfig,
        kube_client: Client,
    ) -> Result<(), Box<dyn std::error::Error>> {
        let server = Self::new(registry, kube_client);
        let tls_config = mtls_config.to_tonic_config()?;

        info!(%addr, "Starting gRPC server with mTLS");

        Server::builder()
            .tls_config(tls_config)?
            .add_service(server.into_service())
            .serve(addr)
            .await?;

        Ok(())
    }
}

#[tonic::async_trait]
impl LatticeAgent for AgentServer {
    type StreamMessagesStream =
        Pin<Box<dyn Stream<Item = Result<CellCommand, Status>> + Send + 'static>>;

    #[instrument(skip(self, request))]
    async fn stream_messages(
        &self,
        request: Request<Streaming<AgentMessage>>,
    ) -> Result<Response<Self::StreamMessagesStream>, Status> {
        let remote_addr = request.remote_addr();
        info!(?remote_addr, "New agent connection");

        let mut inbound = request.into_inner();

        // Channel for sending commands to this agent
        let (command_tx, command_rx) = mpsc::channel::<CellCommand>(32);

        // Clone for the spawned task
        let registry = self.registry.clone();
        let kube_client = self.kube_client.clone();
        let command_tx_clone = command_tx.clone();

        // Spawn task to handle incoming messages
        tokio::spawn(async move {
            let mut cluster_name: Option<String> = None;

            while let Some(result) = inbound.next().await {
                match result {
                    Ok(msg) => {
                        // Track the cluster name for cleanup
                        if cluster_name.is_none() {
                            cluster_name = Some(msg.cluster_name.clone());
                        }

                        // Handle message directly using standalone function (no temp object)
                        handle_agent_message_impl(
                            registry.clone(),
                            &msg,
                            &command_tx_clone,
                            &kube_client,
                        )
                        .await;
                    }
                    Err(e) => {
                        error!(error = %e, "Error receiving agent message");
                        break;
                    }
                }
            }

            // Cleanup on disconnect
            if let Some(name) = cluster_name {
                info!(cluster = %name, "Agent disconnected");
                registry.unregister(&name);
            }
        });

        // Return stream of commands to send to agent
        let outbound = ReceiverStream::new(command_rx);
        Ok(Response::new(Box::pin(outbound.map(Ok))))
    }
}

#[cfg(test)]
mod tests {
    use std::sync::Arc;

    use super::*;
    use crate::AgentRegistry;
    use lattice_proto::{
        agent_message::Payload, AgentReady, BootstrapComplete, ClusterHealth, Heartbeat,
        StatusResponse,
    };

    /// Test helper: handle message directly without needing a server
    /// This bypasses the kube client requirement for unit tests
    async fn test_handle_message(
        registry: &AgentRegistry,
        msg: &AgentMessage,
        command_tx: &mpsc::Sender<CellCommand>,
    ) {
        let cluster_name = &msg.cluster_name;

        // Simplified handler for tests - same logic but skips ClusterDeleting persistence
        match &msg.payload {
            Some(Payload::Ready(ready)) => {
                let conn = AgentConnection::new(
                    cluster_name.clone(),
                    ready.agent_version.clone(),
                    ready.kubernetes_version.clone(),
                    command_tx.clone(),
                );
                registry.register(conn);
                registry.update_state(cluster_name, ready.state());
                if ready.state() == AgentState::Ready {
                    registry.set_pivot_complete(cluster_name, true);
                }
            }
            Some(Payload::BootstrapComplete(bc)) => {
                registry.set_capi_ready(cluster_name, bc.capi_ready);
            }
            Some(Payload::Heartbeat(hb)) => {
                registry.update_state(cluster_name, hb.state());
            }
            Some(Payload::ClusterHealth(_)) => {}
            Some(Payload::StatusResponse(_)) => {}
            Some(Payload::ClusterDeleting(_)) => {}
            Some(Payload::KubernetesResponse(_)) => {}
            Some(Payload::MoveAck(_)) => {}
            Some(Payload::MoveCompleteAck(_)) => {}
            None => {}
        }
    }

    /// Create a new registry for tests
    fn create_test_registry() -> SharedAgentRegistry {
        Arc::new(AgentRegistry::new())
    }

    // Test handle_agent_message with Ready payload
    #[tokio::test]
    async fn test_handle_ready_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Provisioning.into(),
                api_server_endpoint: "https://api.test:6443".to_string(),
            })),
        };

        test_handle_message(&registry, &msg, &tx).await;

        // Verify agent was registered
        assert!(!registry.is_empty());
        let conn = registry
            .get("test-cluster")
            .expect("agent should be registered");
        assert_eq!(conn.cluster_name, "test-cluster");
        assert_eq!(conn.agent_version, "0.1.0");
        assert_eq!(conn.kubernetes_version, "1.28.0");
        assert_eq!(conn.state, AgentState::Provisioning);
    }

    #[tokio::test]
    async fn test_handle_ready_message_updates_existing() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        // First ready message
        let msg1 = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Provisioning.into(),
                api_server_endpoint: "https://api.test:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &msg1, &tx).await;

        // Second ready message with updated state
        let msg2 = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Ready.into(),
                api_server_endpoint: "https://api.test:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &msg2, &tx).await;

        let conn = registry
            .get("test-cluster")
            .expect("agent should be registered");
        assert_eq!(conn.state, AgentState::Ready);
    }

    // Test handle_agent_message with BootstrapComplete payload
    #[tokio::test]
    async fn test_handle_bootstrap_complete_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::BootstrapComplete(BootstrapComplete {
                capi_ready: true,
                installed_providers: vec!["docker".to_string()],
            })),
        };

        // Should not panic
        test_handle_message(&registry, &msg, &tx).await;
    }

    // Test handle_agent_message with Heartbeat payload
    #[tokio::test]
    async fn test_handle_heartbeat_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        // First register the agent
        let ready_msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Ready.into(),
                api_server_endpoint: "https://api.test:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &ready_msg, &tx).await;

        // Send heartbeat
        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Heartbeat(Heartbeat {
                state: AgentState::Ready.into(),
                timestamp: None,
                uptime_seconds: 3600,
            })),
        };
        test_handle_message(&registry, &msg, &tx).await;

        // State should remain Ready
        let conn = registry
            .get("test-cluster")
            .expect("agent should be registered");
        assert_eq!(conn.state, AgentState::Ready);
    }

    // Test handle_agent_message with ClusterHealth payload
    #[tokio::test]
    async fn test_handle_cluster_health_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::ClusterHealth(ClusterHealth {
                ready_nodes: 3,
                total_nodes: 3,
                ready_control_plane: 1,
                total_control_plane: 1,
                conditions: vec![],
            })),
        };

        // Should not panic
        test_handle_message(&registry, &msg, &tx).await;
    }

    // Test handle_agent_message with StatusResponse payload
    #[tokio::test]
    async fn test_handle_status_response_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::StatusResponse(StatusResponse {
                request_id: "req-123".to_string(),
                state: AgentState::Ready.into(),
                health: None,
                capi_status: None,
            })),
        };

        // Should not panic
        test_handle_message(&registry, &msg, &tx).await;
    }

    // Test handle_agent_message with no payload
    #[tokio::test]
    async fn test_handle_empty_payload_message() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: None,
        };

        // Should not panic, just log warning
        test_handle_message(&registry, &msg, &tx).await;
    }

    // Test registry interactions through server
    #[tokio::test]
    async fn test_multiple_agents_registration() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        // Register first agent
        let msg1 = AgentMessage {
            cluster_name: "cluster-1".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Ready.into(),
                api_server_endpoint: "https://api.cluster1:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &msg1, &tx).await;

        // Register second agent
        let msg2 = AgentMessage {
            cluster_name: "cluster-2".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.2.0".to_string(),
                kubernetes_version: "1.29.0".to_string(),
                state: AgentState::Provisioning.into(),
                api_server_endpoint: "https://api.cluster2:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &msg2, &tx).await;

        // Verify both are registered
        assert_eq!(registry.len(), 2);

        let conn1 = registry
            .get("cluster-1")
            .expect("cluster-1 should be registered");
        assert_eq!(conn1.agent_version, "0.1.0");

        let conn2 = registry
            .get("cluster-2")
            .expect("cluster-2 should be registered");
        assert_eq!(conn2.agent_version, "0.2.0");
    }

    // Test state transitions through messages
    #[tokio::test]
    async fn test_full_state_transition_lifecycle() {
        let registry = create_test_registry();
        let (tx, _rx) = mpsc::channel::<CellCommand>(32);

        // Initial: Provisioning
        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Ready(AgentReady {
                agent_version: "0.1.0".to_string(),
                kubernetes_version: "1.28.0".to_string(),
                state: AgentState::Provisioning.into(),
                api_server_endpoint: "https://api.test:6443".to_string(),
            })),
        };
        test_handle_message(&registry, &msg, &tx).await;
        assert_eq!(
            registry
                .get("test-cluster")
                .expect("agent should be registered")
                .state,
            AgentState::Provisioning
        );

        // Heartbeat with Ready state
        let msg = AgentMessage {
            cluster_name: "test-cluster".to_string(),
            payload: Some(Payload::Heartbeat(Heartbeat {
                state: AgentState::Ready.into(),
                timestamp: None,
                uptime_seconds: 60,
            })),
        };
        test_handle_message(&registry, &msg, &tx).await;
        assert_eq!(
            registry
                .get("test-cluster")
                .expect("agent should be registered")
                .state,
            AgentState::Ready
        );
    }
}
